Inserção do pdf/Download

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="Currículo/Curriculo.docx" class="button"><i class="fa fa-download"></i>Baixar Currículo</a>
+                     <a href="Currículo/Curriculo.pdf" class="button"><i class="fa fa-download"></i>Baixar Currículo</a>
                   </p>
                </div>
 
