--- a/index.html
+++ b/index.html
@@ -95,18 +95,21 @@
 
             <h2>Sobre mim</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>Atualmente estudo no CEFET-MG , programando em java e HTML.
+               Minha meta é que apos o curso eu me aprofunde mais no Ramo de programção web, na qual me senti interessado. 
+               Estou bem empolgado, pois apos o curso irei iniciar minha jornada no mercado de trabalho. Minha meta é~continuar estudando e 
+               fortalecer meu currículo e assim ser um bom profissional.
             </p>
 
             <div class="row">
 
                <div class="columns contact-details">
+                  <p>
 
+
+
+
+                  </p>
                   <h2>Contato</h2>
                   <p class="address">
 						   <span>Guilherme Freitas</span><br>
@@ -115,11 +118,15 @@
                      </span><br>
 						   <span>(031) 9 9638-5897</span><br>
                      <span>gfreitasrodrigues7@gmail.com</span>
-					   </p>
+			      </p>
 
                </div>
 
                <div class="columns download">
+                  <p>
+
+
+                  </p>
                   <p>
                      <a href="Currículo/Curriculo.pdf" class="button"><i class="fa fa-download"></i>Baixar Currículo</a>
                   </p>
