Redes Sociai/Endereço-Contato

--- a/index.html
+++ b/index.html
@@ -741,13 +741,16 @@
 
                <div class="widget widget_contact">
 
-					   <h4>Address and Phone</h4>
-					   <p class="address">
-						   Jonathan Doe<br>
-						   1600 Amphitheatre Parkway <br>
-						   Mountain View, CA 94043 US<br>
-						   <span>(123) 456-7890</span>
-					   </p>
+					   <h4>Contato</h4>
+                       <p class="address">
+                           <span>Guilherme Freitas</span><br>
+                           <span>
+                               Antunes  Nº160<br>
+                               Marliéria, MG 35185000 BR
+                           </span><br>
+                           <span>(031) 9 9638-5897</span><br>
+                           <span>gfreitasrodrigues7@gmail.com</span>
+                       </p>
 
 				   </div>
 
@@ -791,15 +794,12 @@
 
          <div class="twelve columns">
 
-            <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
-            </ul>
+             <ul class="social-links">
+                 <li><a href="https://www.facebook.com/gfreitasrodrigues"><i class="fa fa-facebook"></i></a></li>
+                 <li><a href="https://twitter.com/Guilher35871734"><i class="fa fa-twitter"></i></a></li>
+                 <li><a href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus"></i></a></li>
+                 <li><a href="https://www.instagram.com/fgui.rodrigues/"><i class="fa fa-instagram"></i></a></li>
+             </ul>
 
             <ul class="copyright">
                <li>&copy; Copyright 2014 CeeVee</li>
