Alteração lab/CEFET

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--[if lt IE 8 ]><html class="no-js ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="no-js ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 8)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
@@ -58,9 +58,14 @@
          <div class="banner-text">
              <h1 class="responsive-headline">Eu sou Guilherme.</h1>
              <h3>
+                <p>
+
+
+                  
+                </p>
                  Sou programador de <span>CSS</span>, <span>HTML</span> e <span>JAVA.</span>Continuo incessantemente estudando para
                  fortificar meu currículo, e assim, me inserir no mercado de tabalho. Vamos <a class="smoothscroll" href="#about">começar a rolar</a>
-                 e aprender mais <a class="smoothscroll" href="#about">sobre mim</a>.
+                 e aprender mais <a class="smoothscroll" href="#about">sobre mim <i>Feijao</i></a>.
              </h3>
             <hr />
             <ul class="social">
