Retirei Feijão(teste)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </p>
                  Sou programador de <span>CSS</span>, <span>HTML</span> e <span>JAVA.</span>Continuo incessantemente estudando para
                  fortificar meu currículo, e assim, me inserir no mercado de tabalho. Vamos <a class="smoothscroll" href="#about">começar a rolar</a>
-                 e aprender mais <a class="smoothscroll" href="#about">sobre mim <i>Feijao</i></a>.
+                 e aprender mais <a class="smoothscroll" href="#about">sobre mim </a>.
              </h3>
             <hr />
             <ul class="social">
