--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </p>
                  Sou programador de <span>CSS</span>, <span>HTML</span> e <span>JAVA.</span>Continuo incessantemente estudando para
                  fortificar meu currículo, e assim, me inserir no mercado de tabalho. Vamos <a class="smoothscroll" href="#about">começar a rolar</a>
-                 e aprender mais <a class="smoothscroll" href="#about">sobre mim </a>.
+                 e aprender mais <a class="smoothscroll" href="#about">sobre mim <i>Feijao</i></a>.
              </h3>
             <hr />
             <ul class="social">
@@ -587,37 +587,6 @@
    </section> <!-- Portfolio Section End-->
 
 
-   <!-- Call-To-Action Section
-   ================================================== -->
-   <section id="call-to-action">
-
-      <div class="row">
-
-         <div class="two columns header-col">
-
-            <h1><span>Get Hosting.</span></h1>
-
-         </div>
-
-         <div class="seven columns">
-
-            <h2><span class="lead">Unde Omnis Iste</span></h2>
-            <p><span class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae. </span></p>
-
-         </div>
-
-         <div class="three columns action">
-
-
-
-         </div>
-
-      </div>
-
-   </section> <!-- Call-To-Action Section End-->
-
-
    <!-- Testimonials Section
    ================================================== -->
    <section id="testimonials">
@@ -637,12 +606,18 @@
                <div class="flexslider">
 
                   <ul class="slides">
+                     <p>
 
+
+                        
+                     </p>
                      <li>
                         <blockquote>
-                           <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                           to do what you believe is great work. And the only way to do great work is to love what you do.
-                           If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                           <p>
+                              Seu trabalho vai preencher grande parte de sua vida, e a única maneira de estar realmente 
+                              satisfeito é fazer o que você acredita ser um ótimo trabalho. E a única maneira de fazer 
+                              um ótimo trabalho é amar o que você faz. Se você ainda não o encontrou, continue procurando. 
+                              Não se acomode. Como em todos os assuntos do coração, você saberá quando o encontrar.
                            </p>
                            <cite>Steve Jobs</cite>
                         </blockquote>
@@ -650,14 +625,30 @@
 
                      <li>
                         <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                           <p>
+                              Nenhum obstáculo será grande se a sua vontade de vencer for maior.
                            </p>
-                           <cite>Mr. Adobe</cite>
+                           <cite>Autor desconhecido</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
+                     <li>
+                        <blockquote>
+                           <p>
+                              Só existem dois dias do ano em que você não pode fazer nada: um se chama ontem e outro amanhã
+                           </p>
+                           <cite>Dalai Lama</cite>
+                        </blockquote>
+                     </li> <!-- slide ends -->
+
+                     <li>
+                        <blockquote>
+                           <p>
+                              Mesmo que já tenhas feito uma longa caminhada, há sempre um novo caminho a fazer.
+                           </p>
+                           <cite>Santo Agostinho</cite>
+                        </blockquote>
+                     </li> <!-- slide ends -->
                   </ul>
 
                </div> <!-- div.flexslider ends -->
