--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                <div class="twelve columns">
 
                   <h3>CEFET-MG</h3>
-                  <p class="info">Desenvolvimento de Sistemas <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <p class="info">Desenvolvimento de Sistemas <span>&bull;</span> <em class="date">Fevereiro 2018</em></p>
 
                   <p>
                     Iniciei meu curso no CEFET em 2018 e desde então venho me aprofundando nas materias do curso,
@@ -184,7 +184,7 @@
       <div class="row work">
 
          <div class="three columns header-col">
-            <h1><span>Work</span></h1>
+            <h1><span>Trabalhos</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -193,14 +193,11 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>Carregando...</h3>
+                  <p class="info"><span>&bull;</span> <em class="date"></em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                 
                   </p>
 
                </div>
