--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                <div class="twelve columns">
 
                   <h3>Carregando...</h3>
-                  <p class="info"><span>&bull;</span> <em class="date"></em></p>
+                  <p class="info">Em um futuro proximo<span>&bull;</span> 20.. <em class="date"></em></p>
 
                   <p>
                  
@@ -204,23 +204,7 @@
 
             </div> <!-- item end -->
 
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
-
-                  <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
+            
 
          </div> <!-- main-col end -->
 
