--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                <div class="twelve columns">
 
                   <h3>Carregando...</h3>
-                  <p class="info">Em um futuro proximo<span>&bull;</span> 20.. <em class="date"></em></p>
+                  <p class="info">Em um futuro proximo<span>&bull;</span> 20... <em class="date"></em></p>
 
                   <p>
                  
@@ -247,7 +247,7 @@
 
          <div class="twelve columns collapsed">
 
-            <h1>Check Out Some of My Works.</h1>
+            <h1>Mais sobre mim</h1>
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
@@ -256,10 +256,10 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/coffee.jpg">
+                        <img alt="" src="images/portfolio/lasanha.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Coffee</h5>
+          					      <h5>Comida</h5>
                               <p>Illustrration</p>
           					   </div>
                         </div>
