--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <p>Atualmente estudo no CEFET-MG , programando em java e HTML.
                Minha meta é que apos o curso eu me aprofunde mais no Ramo de programção web, na qual me senti interessado. 
-               Estou bem empolgado, pois apos o curso irei iniciar minha jornada no mercado de trabalho. Minha meta é~continuar estudando e 
+               Estou bem empolgado, pois apos o curso irei iniciar minha jornada no mercado de trabalho. Minha meta é continuar estudando e 
                fortalecer meu currículo e assim ser um bom profissional.
             </p>
 
