Mudançaa de imagens

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/claquet.jpeg">
+                        <img alt="" src="images/portfolio/Marvel.jpeg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Filmes</h5>
