--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-claquet.jpeg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-Marvel.jpg" alt="" />
 
 		      <div class="description-box">
 			      <h4>Into the Light</h4>
