Sobre mim att 1.0

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Comida</h5>
-                              <p>Illustrration</p>
+                              <p>Hamburhuer</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -276,8 +276,8 @@
                         <img alt="" src="images/portfolio/console1.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Console</h5>
-                              <p>Web Development</p>
+          					      <h5>Games</h5>
+                              <p>Jogos Digitais</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -294,7 +294,7 @@
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Esporte</h5>
-                              <p>Webdesign</p>
+                              <p>Vôlei</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -311,7 +311,7 @@
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Filmes</h5>
-                              <p>Photography</p>
+                              <p>Supe-Herói</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
