--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/Marvel.jpg">
+                        <img alt="" src="images/portfolio/Anime.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Filmes</h5>
-                              <p>Supe-Herói</p>
+          					      <h5>Animes</h5>
+                              <p>One Punch Man</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -381,7 +381,7 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-Marvel.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-Anime.jpg" alt="" />
 
 		      <div class="description-box">
 			      <h4>Into the Light</h4>
