--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/volei.jpg">
+                        <img alt="" src="images/portfolio/PING.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Esporte</h5>
-                              <p>Vôlei</p>
+                              <p>Ping Pong</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -364,7 +364,7 @@
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-volei.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-PING.jpg" alt="" />
 
 		      <div class="description-box">
 			      <h4>Judah</h4>
