--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Comida</h5>
-                              <p>Hamburhuer</p>
+                              <p>Hamburguer</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -333,14 +333,16 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-Hamburguer.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Coffee Cup</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			      <h4>Hamburguer</h4>
+			      <p>Carne moída quando se junta, bem juntinho mesmo, vira essa delícia que é o hambúrguer. 
+                  Na versão mais clássica, vai para o pão, com queijo derretido. Mas também funciona servido no prato, 
+                  com uma boa salada, no jantar de dia de semana.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Panelinha, Receitas</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net" target="_blank">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
+               <a href="https://www.panelinha.com.br/receita/hamburguer-de-patinho" target="_blank">Detales</a>
+		         <a class="popup-modal-dismiss">Fechar</a>
             </div>
 
 	      </div><!-- modal-01 End -->
