Correção de linguagem

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="https://www.panelinha.com.br/receita/hamburguer-de-patinho" target="_blank">Detales</a>
+               <a href="https://www.panelinha.com.br/receita/hamburguer-de-patinho" target="_blank">Detalhes</a>
 		         <a class="popup-modal-dismiss">Fechar</a>
             </div>
 
