--- a/index.html
+++ b/index.html
@@ -352,14 +352,17 @@
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
 
 		      <div class="description-box">
-			      <h4>Console</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
+			      <h4>Video Game</h4>
+			      <p>Um dos passa tempos mais utilizados na atualidade pelos joven e alguns adultos. O video game basicamente consiste em,
+                   um jogo eletrônico, no qual o jogador interage através de periféricos conectados ao aparelho, como controles (joysticks) 
+                   e/ou teclado com imagens enviadas a uma televisão ou um monitor.
+               </p>
+               <span class="categories"><i class="fa fa-tag"></i> Wikipédia, enciclopédia livre</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net" target="_blank">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
+               <a href="https://pt.wikipedia.org/wiki/Jogo_eletr%C3%B4nico" target="_blank">Detalhes</a>
+		         <a class="popup-modal-dismiss">Fechar</a>
             </div>
 
 	      </div><!-- modal-02 End -->
