--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 			      <p>Carne moída quando se junta, bem juntinho mesmo, vira essa delícia que é o hambúrguer. 
                   Na versão mais clássica, vai para o pão, com queijo derretido. Mas também funciona servido no prato, 
                   com uma boa salada, no jantar de dia de semana.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Panelinha, Receitas</span>
+               <span class="categories"><i class="fa fa-tag"></i><b>Panelinha, Receitas</b></span>
 		      </div>
 
             <div class="link-box">
@@ -357,7 +357,7 @@
                    um jogo eletrônico, no qual o jogador interage através de periféricos conectados ao aparelho, como controles (joysticks) 
                    e/ou teclado com imagens enviadas a uma televisão ou um monitor.
                </p>
-               <span class="categories"><i class="fa fa-tag"></i> Wikipédia, enciclopédia livre</span>
+               <span class="categories"><i class="fa fa-tag"></i> <b>Wikipédia, enciclopédia livre</b></span>
 		      </div>
 
             <div class="link-box">
