--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 			      <p>Carne moída quando se junta, bem juntinho mesmo, vira essa delícia que é o hambúrguer. 
                   Na versão mais clássica, vai para o pão, com queijo derretido. Mas também funciona servido no prato, 
                   com uma boa salada, no jantar de dia de semana.</p>
-               <span class="categories"><i class="fa fa-tag"></i><b>Panelinha, Receitas</b></span>
+               <span class="categories"><i class="fa fa-tag"></i>Panelinha, Receitas</span>
 		      </div>
 
             <div class="link-box">
