--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                    um jogo eletrônico, no qual o jogador interage através de periféricos conectados ao aparelho, como controles (joysticks) 
                    e/ou teclado com imagens enviadas a uma televisão ou um monitor.
                </p>
-               <span class="categories"><i class="fa fa-tag"></i> <b>Wikipédia, enciclopédia livre</b></span>
+               <span class="categories"><i class="fa fa-tag"></i> Wikipédia, enciclopédia livre</span>
 		      </div>
 
             <div class="link-box">
