--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="banner-text">
                 <h1 class="responsive-headline">Eu sou Guilherme.</h1>
                 <h3>
-                    Sou programador de <span>CSS</span>, <span>HTML</span> e <span>JAVA.</span>Continuo incessantemente estudando para fortificar meu currículo, e assim, me inserir no mercado de tabalho. Vamos <a class="smoothscroll" href="#about">começar a rolar</a>                    e aprender mais <a class="smoothscroll" href="#about">sobre mim.</a>
+                    Sou programador de <span>CSS</span>, <span>HTML</span> e <span>JAVA.</span>Continuo incessantemente estudando para fortificar meu currículo, e assim, me inserir no mercado de trabalho. Venha <a class="smoothscroll" href="#about">conhecer </a>                    um pouco mais <a class="smoothscroll" href="#about">sobre mim.</a>
                 </h3>
                 <hr />
                 <ul class="social">
