barras de status atualizadas

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <span>Antunes  Nº160<br>
 						         Marliéria, MG 35185000 BR
                      </span><br>
-                            <span>(031) 9 9638-5897</span><br>
+                            <span>(031) 9 9528-1050</span><br>
                             <span>gfreitasrodrigues7@gmail.com</span>
                         </p>
 
@@ -233,7 +233,7 @@
 
                     <ul class="skills">
                         <li><span class="bar-expand Java"></span><em>Java</em></li>
-                        <li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
+                        <li><span class="bar-expand Bootstrap"></span><em>Bootstrap</em></li>
                         <li><span class="bar-expand css"></span><em>CSS</em></li>
                         <li><span class="bar-expand html5"></span><em>HTML5</em></li>
                         <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
