--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
                     <ul class="skills">
                         <li><span class="bar-expand Java"></span><em>Java</em></li>
-                        <li><span class="bar-expand wordpress"></span><em>bootstrap</em></li>
+                        <li><span class="bar-expand wordpress"></span><em>Bootstrap</em></li>
                         <li><span class="bar-expand css"></span><em>CSS</em></li>
                         <li><span class="bar-expand html5"></span><em>HTML5</em></li>
                         <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
